--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 3306,
   "username": "root",
-  "password": "golDB",
+  "password": "password",
   "database": "insite",
   "synchronize": true,
   "logging": true,
